--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
          crossorigin="anonymous"
          referrerpolicy="no-referrer"
       />
-      <title>boiler plate</title>
+      <title>color picker</title>
    </head>
    <body>
       <h1>چه رنگیه!؟</h1>
